--- a/Chapter_2_Core_Learning_Algorithms.ipynb
+++ b/Chapter_2_Core_Learning_Algorithms.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter 2 - Core Learning Algorithms.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM0ZMxAD7WURFNDuYNRGcIp",
+      "authorship_tag": "ABX9TyO38NQ7ID/eBgOrmv+vXYb4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2509,7 +2509,7 @@
         "    initial_distribution=initial_distribution,\n",
         "    transition_distribution=transition_distribution,\n",
         "    observation_distribution=observation_distribution,\n",
-        "    num_steps=7)"
+        "    num_steps=7) #how many days we want to predict and run the model"
       ],
       "execution_count": 48,
       "outputs": []
@@ -2532,10 +2532,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gjKAA1Ukpk8E",
-        "outputId": "afa2f9db-db71-4432-efa5-828795ce23c0"
+        "outputId": "36e9c147-bf31-4b63-82ed-e7ebbf20edcb"
       },
       "source": [
-        "mean = model.mean()\n",
+        "mean = model.mean() #calculate the probabilities\n",
         "\n",
         "# due to the way TensorFlow works on a lower level we need to evaluate part of the graph\n",
         "# from within a session to see the value of this tensor\n",
@@ -2544,7 +2544,7 @@
         "with tf.compat.v1.Session() as sess:  \n",
         "  print(mean.numpy())"
       ],
-      "execution_count": 49,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
